# py-concurrency-gil

./: .gitignore  load_test.sh
backend/: logger.py  main.py  pyproject.toml  room.py  stats.py  task.py
backend/big_dto/: big_dto.py
backend/heavy_service/: heavy_service.py  process_pool_strategy.py  thread_pool_strategy.py
backend/leaky_service/: leaky_service.py
backend/pool_strategy/: pool_strategy.py  process_pool_strategy.py  thread_pool_strategy.py
backend/race_service/: race_service.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
