[project]
name = "py-concurrency-gil"
version = "0.1.0"
description = ""
authors = [
    {name = "irayspace",email = "irayspacii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)",
    "psutil (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
